# zantiflow

./: .dockerignore  .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  FINDINGS.md  HOMEPAGE.md  HOW-TO-INSTALL.md  Justfile  LICENSES  NOTICE  NOTIMPLEMENTEDYET.md  README.md  SECURITY-NO-CROSS-ACCOUNT-DATA.md  TIMING-discoveries.md  UI-ELEMENTS.md  UPDATE-INSTRUCTIONS.md  eslint.config.mjs  logs.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json
adrs/: 0001-zellij-session-telemetry-architecture.md  0002-configurable-telemetry-privacy-controls.md  0003-multi-tenant-backend-and-token-auth.md  0004-google-auth-owner-sign-in.md  0005-attentions-detection-and-triggering.md  0006-notifications-web-push-and-channels.md  0007-chat-bot-notification-channels.md  0008-status-website-dashboard.md  0009-durable-notification-delivery.md  0010-bots-in-python-and-token-storage.md  0011-tiers-and-monetization.md  0012-plugin-device-pairing.md  0013-paid-subscriptions-declined.md  0014-testing-strategy.md  0015-modular-code-organization.md  0016-dashboard-page-and-pane-output.md  0017-secret-scrubbing-and-adaptive-rendering.md  0018-engineering-and-operational-conventions.md  0019-ux-decisions-deferred.md  0020-automated-promo-codes.md  0021-dockerization-and-deployment.md  0022-plugin-publishing-and-user-docs.md  0023-documentation-site-starlight.md  0024-opt-in-hostname-lookup.md  0025-claude-thinking-attention.md  0026-minimise-plugin-update-cadence.md  0030-ephemeral-pane-output.md  (+30 more)
apps/plugin/: Cargo.toml  LICENSES  README.md  justfile
apps/plugin/dev/: zantiflow-dev.kdl
apps/plugin/src/: activity.rs  attentions.rs  cadence.rs  config.rs  control.rs  debuglog.rs  fingerprint.rs  host.rs  lib.rs  main.rs  model.rs  net.rs  output.rs  pairing.rs  plugin.rs  privacy.rs  scrub.rs  snapshot.rs
apps/plugin/tests/: cadence_behavior.rs
(+284 files in other folders)
